--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "images": "node optimize-images.js",
+    "dev": "parcel src/index.html"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +15,8 @@
   "type": "commonjs",
   "devDependencies": {
     "parcel": "^2.15.4"
+  },
+  "dependencies": {
+    "sharp": "^0.34.3"
   }
 }
