--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/*.html",
     "test": "echo \"Error: no test specified\" && exit 1",
     "images": "node optimize-images.js",
-    "dev": "parcel src/index.html",
+    "dev": "parcel src/*.html",
     "favicon": "node convert-favicon.js"
   },
   "keywords": [],
